@@ -1,3 +1,9 @@
+TAG: gxdimageload-3-2-0-1
+DATE: 08/29/2005
+STAFF: dbm
+RELEASE: A
+CHANGES: TR 6739
+
 TAG: gxdimageload-tr6739-BP
 DATE: 08/17/2005
 STAFF: dbm
